smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/annotation-unclosed-list2.smithy
// Parse error at line 5, column 1 near `[EOF]`: Expected: ']', but found '[EOF]'
namespace com.foo
@tags(["foo", "bar",
string MyString
